--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ input {font-family: 'Oswald', sans-serif;}
   border: 0;
   box-shadow: 2px 2px 15px #f1f1f1;
   border-radius: 30px;
-  color: white;
+  color: #fff;
   font-size: 18px;
 }
 
@@ -48,6 +48,7 @@ padding: 10px;
 .registration_btn {
   padding: 5px;
   margin-top: 20px;
+  margin-bottom: 10px;
   padding-left: 10px;
   border-radius: 10px;
   background-color: #e6e6e6;
@@ -62,3 +63,4 @@ padding: 10px;
   cursor: pointer;
   background-color: #dedede;
 }
+.
