--- a/css/main.css
+++ b/css/main.css
@@ -46,21 +46,41 @@ padding: 10px;
 }
 
 .registration_btn {
-  padding: 5px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  padding-left: 10px;
+  padding: 5px 10px 5px 10px;
   border-radius: 10px;
-  background-color: #e6e6e6;
+  background-color: #fff;
+}
+
+.btn_bck {
   box-shadow: 0px 5px 10px rgb(0, 0, 0,0.0);
   -webkit-transition: box-shadow 0.15s ease-out;
   -moz-transition: box-shadow 0.15s ease-out;
   -o-transition: box-shadow 0.15s ease-out;
   transition: box-shadow 0.15s ease-out;
 }
-.registration_btn:hover{
+
+.btn_bck:hover{
   box-shadow: 0px 5px 10px rgb(0, 0, 0,0.2);
-  cursor: pointer;
-  background-color: #dedede;
 }
-.
+
+input[type="checkbox"] {
+  margin:  20px 5px 15px 5px;
+}
+
+.test_table {
+  display:inline-block;
+  padding: 10px;
+  background-color: #bfbfbf;
+  border-radius: 20px;
+}
+
+.test_table li {
+  margin: 10px;
+  display:inline-block;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #fff;
+  background-color: #142b4d;
+  border-radius: 10px;
+}
