--- a/css/php.css
+++ b/css/php.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Rubik', sans-serif;
   margin-left: 20%;
   position:  inherit;
   width: 1150px;
