Js first tryings

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ input[type="checkbox"] {
   font-size: 14px;
   font-weight: 400px;
   padding: 10px;
-  background-color: #3300ff;
+  background: #3300ff;
 }
 
 .menu .nav_menu {
